--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,3 +9,5 @@ python:
     install:
         - requirements: docs/requirements.txt
         - requirements: requirements.txt
+sphinx:
+   configuration: docs/conf.py
